// SPDX-License-Identifier: MIT
pragma solidity 0.8.17;

import {IVerificationPhase} from "./IVerificationPhase.sol";

abstract contract VerificationPhase is IVerificationPhase {}
