// SPDX-License-Identifier: MIT
pragma solidity 0.8.17;

import {IConfirmation} from "./IConfirmation.sol";

contract Confirmation is IConfirmation {}
