// SPDX-License-Identifier: MIT
pragma solidity 0.8.17;

import {IFunding} from "./IFunding.sol";

contract Funding is IFunding {}
