// SPDX-License-Identifier: MIT
pragma solidity 0.8.17;

import {IVouching} from "./IVouching.sol";

contract Vouching is IVouching {}
