// SPDX-License-Identifier: MIT
pragma solidity 0.8.17;

import {IVerificationProcess} from "./IVerificationProcess.sol";

abstract contract VerificationProcess is IVerificationProcess {}
