@startuml POH_V2

'using "protocol" (P) for proxy

left to right direction

interface IVerificationProcess
interface IVerificationPhase

abstract class VerificationProcess
abstract class VerificationPhase

class Registration
class Renewal
class Recovery

class Vouching
class Funding
class Confirmation

interface ISBT
class SBT
interface IMetadata
class Metadata

' interfaces implementations

Registration --|> VerificationProcess
Renewal --|> VerificationProcess
Recovery --|> VerificationProcess

VerificationPhase <|-- Vouching
VerificationPhase <|-- Funding
VerificationPhase <|-- Confirmation

VerificationPhase .l.|> IVerificationPhase
VerificationProcess .l.|> IVerificationProcess

VerificationProcess --> IVerificationPhase
VerificationPhase --> IVerificationProcess

VerificationProcess -r-> ISBT
ISBT <|.r. SBT
SBT -r-> IMetadata
IMetadata <|.r. Metadata 

@enduml